FIX: Type and unnecessary scrollbar in FF

--- a/src/ui/css/layout.less
+++ b/src/ui/css/layout.less
@@ -2,6 +2,10 @@
 @headerHeight: 3em;
 
 
+body {
+  overflow: hidden;
+}
+
 .drawable-app-container {
   overflow: hidden;
   display: flex;
